--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "homepage": "https://github.com/ViratSathavara/devikrupa-store-backend#readme",
     "dependencies": {
+        "@sendgrid/mail": "^8.1.5",
         "bcryptjs": "^3.0.2",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
@@ -29,6 +30,8 @@
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.15.0",
         "multer": "^2.0.0",
+        "nodemailer": "^7.0.3",
+        "otp-generator": "^4.0.1",
         "stripe": "^18.1.1"
     }
 }
